--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "url": "https://github.com/bakasho-libs/virt-ui-panel.git"
   },
   "scripts": {
-    "example": "comn -f ./example/src/index.js -o ./example/index.js"
+    "example": "comn -f ./example/src/index.js -o ./example/index.js -m"
   },
   "main": "src/index.js",
-  "author": "Bakasho Team",
+  "author": "Faucette Team",
   "license": "MIT",
   "keywords": [
     "virt-ui-panel",
@@ -18,16 +18,16 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
-    "comn": "git://github.com/nathanfaucett/comn.git",
+    "@nathanfaucett/comn": "^0.0.13",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-jsbeautifier": "^0.2.10"
   },
   "dependencies": {
-    "clamp": "git://github.com/nathanfaucett/clamp.git",
-    "dom_dimensions": "git://github.com/nathanfaucett/dom_dimensions.git",
-    "prop_types": "git://github.com/nathanfaucett/prop_types.git",
-    "virt": "git://github.com/nathanfaucett/virt.git",
-    "virt-dom": "git://github.com/nathanfaucett/virt-dom.git"
+    "@nathanfaucett/clamp": "^0.0.1",
+    "@nathanfaucett/dom_dimensions": "^0.0.1",
+    "@nathanfaucett/prop_types": "^0.0.2",
+    "@nathanfaucett/virt": "^0.0.12",
+    "@nathanfaucett/virt-dom": "^0.0.14"
   }
 }
